# vkdev

./: .gitattributes  .gitignore  CMakeLists.txt
shaders/: bruhshader.comp  colored_triangle.frag  colored_triangle.vert  gradient_color.comp  mesh_colored_triangle.vert
src/: CMakeLists.txt  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
